Fixed button width on mobile

--- a/style.css
+++ b/style.css
@@ -204,7 +204,7 @@ body{
 .clr-visual-background {
   display: flex;
   border-radius: 7px;
-  width: 18.75rem;
+  width: auto;
 }
 
 .visual-image,
@@ -224,7 +224,6 @@ body{
   width: 18.75rem;
   border-radius: 30px;
   height: 3.5rem;
-  margin-left: 2.5rem;
   margin-top: 1rem;
   background-color: var(--clr-neutral-400);
   color: var(--clr-neutral-100);
@@ -298,12 +297,12 @@ body{
   
 
   .button {
+    display: block;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 2rem;
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
-    width: auto;
+    margin-top: 2rem;
+    width: 100%;
   }
 }
 
